# Suzerainty

./: Cargo.toml  Readme.md  TODO.md
client/: Cargo.toml
client/assets/fonts/: .part
client/assets/shaders/: debug.wgsl
client/benches/: sphere_bin.rs
client/src/: debug_ui.rs  hex_sphere.rs  lib.rs  main.rs  sphere_bins.rs  states.rs  tectonics.rs  utils.rs  vertex_interpolation.rs
client/src/hex_sphere/: hex_sphere.rs  plugin.rs  tile.rs
client/src/tectonics/: particle.rs  particle_sphere.rs  plate.rs  tectonics.rs  vertex_interpolation.rs
crates/hex_sphere/: Cargo.toml
crates/hex_sphere/src/: hex_sphere.rs  lib.rs  tile.rs
crates/soft_sphere/: Cargo.toml
crates/soft_sphere/src/: lib.rs  point_mass.rs  shape.rs  spring.rs
crates/sphere/: Cargo.toml
crates/sphere/src/: sphere.rs
crates/suz_sim/: Cargo.toml
crates/suz_sim/benches/: soft_body.rs
crates/suz_sim/src/: lib.rs  particle_sphere.rs  plate.rs  sphere_bins.rs  tectonics.rs  vec_utils.rs
planet/: Cargo.toml
planet/src/: debug_ui.rs  hex_sphere.rs  main.rs  states.rs  tectonics.rs  vertex_interpolation.rs
