[package]
name = "planet"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_panorbit_camera = "0.26.0"
bevy = { version = "0.16.1", features = ["file_watcher", "bevy_dev_tools"] }
rand = "0.9.1"
rustc-hash = "2.1.1"
subsphere = "0.7.1"
noise = "0.9.0"
rayon = "1.10.0"
suz_sim = { version = "0.1.0", path = "../crates/suz_sim" }